login-register for  customer